@@ -7,7 +7,6 @@
  ******************************************************************************/
 package org.phoebus.pv.ca;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.diirt.vtype.VEnum;
@@ -35,7 +34,7 @@ public class VTypeForEnum extends DBRAlarmTimeWrapper<DBR_TIME_Enum> implements 
     @Override
     public List<String> getLabels()
     {
-        return Arrays.asList(labels.getLabels());
+        return List.of(labels.getLabels());
     }
 
     @Override
